src/test/contracts/negative/pattern_match6.jsligo

type action = ["A"]  | ["B"]  | ["C"];
type state  = ["S1"] | ["S2"]

let do_something = ([state, action]:[state,action]) : state => {
    return match (state) {
        when(S1()): match (action) {
            when(A()): S1();
            when(B()): S2()
        };
        when(S2()): match (action) {
            when(A()): S2();
            when(B()): S1()
        }
    };
};
